hphp/test/zend/bad/ext/soap/tests/bugs/bug50698_4.php
<?php
new SoapClient(dirname(__FILE__) . '/bug50698_4.wsdl');
echo "ok\n";
?>